src/objects/Banana_Farmer_GAPs_Selection__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_chemical_fertilizer_to_use__c</fullName>
        <formula>IF (INCLUDES(Soil_Fertility_Management_Targets__c,&apos;Amount of chemical fertilizer to use&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount of chemical fertilizer to use</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_herbicide_for_use__c</fullName>
        <formula>IF (INCLUDES(Proper_and_Timely_Weed_Control_Targets__c, &apos;Amount of herbicide for use&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount of herbicide for use</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_manure_per_mat__c</fullName>
        <formula>IF (INCLUDES(Soil_Fertility_Management_Targets__c,&apos;Amount of manure per mat&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount of manure per mat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banana_Crisps_Making__c</fullName>
        <formula>IF (INCLUDES(Banana_Value_Addition_Targets__c,&apos;Banana crisps making&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banana Crisps Making</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banana_Farmer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Banana Farmer</label>
        <referenceTo>Banana_Farmer__c</referenceTo>
        <relationshipName>Banana_Farmer_GAP_Selections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banana_Flour_Making__c</fullName>
        <formula>IF (INCLUDES(Banana_Value_Addition_Targets__c, &apos;Banana flour making&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banana Flour Making</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banana_Value_Addition_Targets__c</fullName>
        <label>Banana Value Addition Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Banana wine making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana crisps making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana flour making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Making pan cakes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Banana_Wine_Making__c</fullName>
        <formula>IF (INCLUDES(Banana_Value_Addition_Targets__c ,&apos;Banana wine making&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banana Wine Making</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banana_pests_and_disease_control_Targets__c</fullName>
        <label>Banana pests and disease control Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Detection of pest and disease attack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest &amp; disease control measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency of pesticide application</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Banana_pests_and_disease_control__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c,&apos;Banana pests and disease control&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banana pests and disease control</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banana_value_addition__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c,&apos;Banana value addition&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banana value addition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKW_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CKW Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Banana Farmer GAPs Selections</relationshipLabel>
        <relationshipName>Banana_Farmer_GAPs_Selections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collective_Marketing__c</fullName>
        <formula>IF (INCLUDES(Group_Production_and_Marketing_Targets__c, &apos;Collective marketing&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collective Marketing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collective_Production__c</fullName>
        <formula>IF (INCLUDES(Group_Production_and_Marketing_Targets__c, &apos;Collective production&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collective Production</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collective_purchase_of_agro_inputs__c</fullName>
        <formula>IF (INCLUDES(Ease_of_access_to_agro_inputs_Targets__c, &apos;Collective purchase of agro-inputs&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collective purchase of agro-inputs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corm_removal_after_care__c</fullName>
        <formula>IF (INCLUDES(Pruning_desuckering_Targets__c, &apos;Corm removal (after care)&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corm removal (after care)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detection_of_pest_and_disease_attack__c</fullName>
        <formula>IF (INCLUDES(Banana_pests_and_disease_control_Targets__c, &apos;Detection of pest and disease attack&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detection of pest and disease attack</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digging_trenches_or_terraces__c</fullName>
        <formula>IF (INCLUDES(Soil_and_Water_Conservation_Targets__c, &apos;Digging trenches or terraces&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digging trenches or terraces</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ease_of_access_to_agro_inputs_Targets__c</fullName>
        <label>Ease of access to agro-inputs Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Obtaining quality agro-inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective purchase of agro-inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General information on agro-inputs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ease_of_access_to_agro_inputs__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c,&apos;Ease of access to agro-inputs&apos;),&apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ease of access to agro-inputs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farmer_Full_Name__c</fullName>
        <formula>Banana_Farmer__r.Focus_Farmer__r.Person__r.First_Name__c + &apos; &apos; + Banana_Farmer__r.Focus_Farmer__r.Person__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Farmer Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farmer_Identifier__c</fullName>
        <formula>Banana_Farmer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Farmer Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Weeding__c</fullName>
        <formula>IF (INCLUDES(Proper_and_Timely_Weed_Control_Targets__c, &apos;Frequency of weeding&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency of Weeding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_fertilizer_application__c</fullName>
        <formula>IF (INCLUDES(Soil_Fertility_Management_Targets__c, &apos;Frequency of fertilizer application&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency of fertilizer application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_pesticide_application__c</fullName>
        <formula>IF (INCLUDES(Banana_pests_and_disease_control_Targets__c, &apos;Frequency of pesticide application&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency of pesticide application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_information_on_agro_inputs__c</fullName>
        <formula>IF (INCLUDES(Ease_of_access_to_agro_inputs_Targets__c, &apos;General information on agro-inputs&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General information on agro-inputs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Production_and_Marketing_Targets__c</fullName>
        <label>Group Production and Marketing Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Collective production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market information</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Group_Production_and_Marketing__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c,&apos;Group production and marketing&apos;),&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Production and Marketing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_to_provide_support__c</fullName>
        <formula>IF (INCLUDES(Providing_support_for_banana_Targets__c, &apos;How to provide support&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How to provide support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_to_use_protective_gear__c</fullName>
        <formula>IF (INCLUDES(Proper_and_Timely_Weed_Control_Targets__c, &apos;How to use protective gear&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How to use protective gear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kind_of_leaves_to_remove_at_de_leafing__c</fullName>
        <formula>IF (INCLUDES(Pruning_desuckering_Targets__c, &apos;Kind of leaves to remove at de-leafing&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kind of leaves to remove at de-leafing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kind_or_types_of_records_kept__c</fullName>
        <formula>IF (INCLUDES(Record_Keeping_Targets__c, &apos;Kind or types of records kept&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kind or types of records kept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <required>true</required>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Making_Pan_Cakes__c</fullName>
        <formula>IF (INCLUDES(Banana_Value_Addition_Targets__c ,&apos;Making pan cakes&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Making Pan Cakes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Information__c</fullName>
        <formula>IF (INCLUDES(Group_Production_and_Marketing_Targets__c, &apos;Market information&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Means_of_Soil_Fertilization__c</fullName>
        <formula>IF (INCLUDES(Soil_Fertility_Management_Targets__c, &apos;Means of soil fertilization&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Means of Soil Fertilization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Fertilizer_or_Manure_Placement__c</fullName>
        <formula>IF (INCLUDES(Soil_Fertility_Management_Targets__c, &apos;Mode of fertilizer or manure placement&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mode of Fertilizer or Manure Placement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mulching__c</fullName>
        <formula>IF (INCLUDES(Soil_and_Water_Conservation_Targets__c, &apos;Mulching&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mulching</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_plants_per_banana_mat__c</fullName>
        <formula>IF (INCLUDES(Pruning_desuckering_Targets__c, &apos;Number plants per banana mat&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number plants per banana mat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obtaining_quality_agro_inputs__c</fullName>
        <formula>IF (INCLUDES(Ease_of_access_to_agro_inputs_Targets__c, &apos;Obtaining quality agro-inputs&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Obtaining quality agro-inputs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pest_disease_control_measures__c</fullName>
        <formula>IF (INCLUDES(Banana_pests_and_disease_control_Targets__c, &apos;Pest &amp; disease control measures&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pest &amp; disease control measures</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planting_grass_across_the_slope__c</fullName>
        <formula>IF (INCLUDES(Soil_and_Water_Conservation_Targets__c, &apos;Planting grass across the slope&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planting grass across the slope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planting_shade_trees_or_wind_breakers__c</fullName>
        <formula>IF (INCLUDES(Soil_and_Water_Conservation_Targets__c, &apos;Planting shade trees or wind breakers&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planting shade trees or wind breakers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proper_and_Timely_Weed_Control_Targets__c</fullName>
        <label>Proper and Timely Weed Control Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Weed control methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency of weeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time of weeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weed control program or plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount of herbicide for use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How to use protective gear</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proper_and_Timely_Weed_Control__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c,&apos;Proper and timely weed control&apos;), &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proper and Timely Weed Control</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Providing_support_for_banana_Targets__c</fullName>
        <label>Providing support for banana Targets</label>
        <picklist>
            <picklistValues>
                <fullName>When to provide support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How to provide support</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Providing_support_for_banana__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c,&apos;Providing support for banana&apos;),&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Providing support for banana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pruning_desuckering_Targets__c</fullName>
        <label>Pruning, desuckering Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Kind of leaves to remove at de-leafing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number plants per banana mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corm removal (after care)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removal of pseudo-stems</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pruning_desuckering_removal_of_stems__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c,&apos;Pruning, desuckering, removal of stems&apos;), &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pruning, desuckering, removal of stems</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Keeping_Targets__c</fullName>
        <label>Record Keeping Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Kind or types of records kept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ways of storing records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of records to make decisions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Record_keeping_on_production_marketing__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c,&apos;Record keeping on production &amp; marketing&apos;), &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record keeping on production &amp; marketing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_input_dealers__c</fullName>
        <formula>IF (INCLUDES(Ease_of_access_to_agro_inputs_Targets__c, &apos;Registered input dealers&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered input dealers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_of_pseudo_stems__c</fullName>
        <formula>IF (INCLUDES(Pruning_desuckering_Targets__c, &apos;Removal of pseudo-stems&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Removal of pseudo-stems</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soil_Fertility_Management_Targets__c</fullName>
        <label>Soil Fertility Management Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Means of soil fertilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type of fertilizers used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount of chemical fertilizer to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount of manure per mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage of fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency of fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mode of fertilizer or manure placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time of fertilizer application</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Soil_Fertility_Management__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c ,&apos;Soil fertility management&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Soil Fertility Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soil_and_Water_Conservation_Targets__c</fullName>
        <label>Soil and Water Conservation Targets</label>
        <picklist>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digging trenches or terraces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planting grass across the slope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planting shade trees or wind breakers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Soil_and_Water_Conservation__c</fullName>
        <formula>IF (INCLUDES(Top_5_Preferred_GAPs_for_Support__c,&apos;Soil and water conservation&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Soil and Water Conservation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_of_fertilizer_application__c</fullName>
        <formula>IF (INCLUDES(Soil_Fertility_Management_Targets__c,&apos;Stage of fertilizer application&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage of fertilizer application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_Fertilizer_Application__c</fullName>
        <formula>IF (INCLUDES(Soil_Fertility_Management_Targets__c,&apos;Time of fertilizer application&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time of Fertilizer Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_Weeding__c</fullName>
        <formula>IF (INCLUDES(Proper_and_Timely_Weed_Control_Targets__c, &apos;Time of weeding&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time of Weeding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_5_Preferred_GAPs_for_Support__c</fullName>
        <label>Top 5 Preferred GAPs for Support</label>
        <picklist>
            <picklistValues>
                <fullName>Soil fertility management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pruning, desuckering, removal of stems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil and water conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Providing support for banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record keeping on production &amp; marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group production and marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper and timely weed control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana pests and disease control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ease of access to agro-inputs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_chemical_or_inorganic_fertilizer__c</fullName>
        <formula>IF (INCLUDES(Soil_Fertility_Management_Targets__c, &apos;Type of chemical or inorganic fertilizer&apos;), &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of chemical or inorganic fertilizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_of_records_to_make_decisions__c</fullName>
        <formula>IF (INCLUDES(Record_Keeping_Targets__c, &apos;Use of records to make decisions&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use of records to make decisions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ways_of_storing_records__c</fullName>
        <formula>IF (INCLUDES(Record_Keeping_Targets__c, &apos;Ways of storing records&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ways of storing records</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weed_Control_Methods__c</fullName>
        <formula>IF (INCLUDES(Proper_and_Timely_Weed_Control_Targets__c, &apos;Weed control methods&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weed Control Methods</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weed_control_program_or_plan__c</fullName>
        <formula>IF (INCLUDES(Proper_and_Timely_Weed_Control_Targets__c, &apos;Weed control program or plan&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weed control program or plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_to_provide_support__c</fullName>
        <formula>IF (INCLUDES(Providing_support_for_banana_Targets__c, &apos;When to provide support&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>When to provide support</label>
        <type>Text</type>
    </fields>
    <label>Banana Farmer GAPs Selection</label>
    <nameField>
        <displayFormat>BG{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Banana Farmer GAP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Banana Farmer GAPs Selections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>